--- a/TestDemo/TestDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
+++ b/TestDemo/TestDemo/Areas/HelpPage/Views/Help/DisplayTemplates/ApiGroup.cshtml
@@ -6,8 +6,8 @@
 @model IGrouping<HttpControllerDescriptor, ApiDescription>
 
 @{
-    var controllerDocumentation = ViewBag.DocumentationProvider != null ? 
-        ViewBag.DocumentationProvider.GetDocumentation(Model.Key) : 
+    var controllerDocumentation = ViewBag.DocumentationProvider != null ?
+        ViewBag.DocumentationProvider.GetDocumentation(Model.Key) :
         null;
 }
 
@@ -18,22 +18,26 @@
 }
 <table class="help-page-table">
     <thead>
-        <tr><th>API</th><th>Description</th></tr>
+    <tr>
+        <th>API</th><th>Description</th>
+    </tr>
     </thead>
     <tbody>
     @foreach (var api in Model)
     {
         <tr>
-            <td class="api-name"><a href="@Url.Action("Api", "Help", new { apiId = api.GetFriendlyId() })">@api.HttpMethod.Method @api.RelativePath</a></td>
+            <td class="api-name">
+                <a href="@Url.Action("Api", "Help", new {apiId = api.GetFriendlyId()})">@api.HttpMethod.Method @api.RelativePath</a>
+            </td>
             <td class="api-documentation">
-            @if (api.Documentation != null)
-            {
-                <p>@api.Documentation</p>
-            }
-            else
-            {
-                <p>No documentation available.</p>
-            }
+                @if (api.Documentation != null)
+                {
+                    <p>@api.Documentation</p>
+                }
+                else
+                {
+                    <p>No documentation available.</p>
+                }
             </td>
         </tr>
     }
