--- a/TestDemo/TestDemo/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/TestDemo/TestDemo/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -5,20 +5,24 @@
 
 <table class="help-page-table">
     <thead>
-        <tr><th>Name</th><th>Value</th><th>Description</th></tr>
+    <tr>
+        <th>Name</th><th>Value</th><th>Description</th>
+    </tr>
     </thead>
     <tbody>
-        @foreach (EnumValueDescription value in Model.Values)
-        {
-            <tr>
-                <td class="enum-name"><b>@value.Name</b></td>
-                <td class="enum-value">
-                    <p>@value.Value</p>
-                </td>
-                <td class="enum-description">
-                    <p>@value.Documentation</p>
-                </td>
-            </tr>
-        }
+    @foreach (EnumValueDescription value in Model.Values)
+    {
+        <tr>
+            <td class="enum-name">
+                <b>@value.Name</b>
+            </td>
+            <td class="enum-value">
+                <p>@value.Value</p>
+            </td>
+            <td class="enum-description">
+                <p>@value.Documentation</p>
+            </td>
+        </tr>
+    }
     </tbody>
 </table>
