--- a/TestDemo/TestDemo/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/TestDemo/TestDemo/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -9,35 +9,37 @@
 {
     <table class="help-page-table">
         <thead>
-            <tr><th>Name</th><th>Description</th><th>Type</th><th>Additional information</th></tr>
+        <tr>
+            <th>Name</th><th>Description</th><th>Type</th><th>Additional information</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (ParameterDescription parameter in Model)
-            {
-                ModelDescription modelDescription = parameter.TypeDescription;
-                <tr>
-                    <td class="parameter-name">@parameter.Name</td>
-                    <td class="parameter-documentation">
-                        <p>@parameter.Documentation</p>
-                    </td>
-                    <td class="parameter-type">
-                        @Html.DisplayFor(m => modelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = modelDescription })
-                    </td>
-                    <td class="parameter-annotations">
-                        @if (parameter.Annotations.Count > 0)
+        @foreach (ParameterDescription parameter in Model)
+        {
+            ModelDescription modelDescription = parameter.TypeDescription;
+            <tr>
+                <td class="parameter-name">@parameter.Name</td>
+                <td class="parameter-documentation">
+                    <p>@parameter.Documentation</p>
+                </td>
+                <td class="parameter-type">
+                    @Html.DisplayFor(m => modelDescription.ModelType, "ModelDescriptionLink", new {modelDescription = modelDescription})
+                </td>
+                <td class="parameter-annotations">
+                    @if (parameter.Annotations.Count > 0)
+                    {
+                        foreach (var annotation in parameter.Annotations)
                         {
-                            foreach (var annotation in parameter.Annotations)
-                            {
-                                <p>@annotation.Documentation</p>
-                            }
+                            <p>@annotation.Documentation</p>
                         }
-                        else
-                        {
-                            <p>None.</p>
-                        }
-                    </td>
-                </tr>
-            }
+                    }
+                    else
+                    {
+                        <p>None.</p>
+                    }
+                </td>
+            </tr>
+        }
         </tbody>
     </table>
 }
@@ -45,4 +47,3 @@ else
 {
     <p>None.</p>
 }
-
